syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.project.smarthome.speakers";
option java_outer_classname = "SpeakersServiceImpl";

package smarthome;

service SpeakersService {
    rpc turnOnSpeakers(BooleanRequest) returns (StringResponse) {}
    rpc displayInputs(BooleanRequest) returns (stream StringResponse) {}
    rpc musicStreaming(stream StringRequest) returns (stream StringResponse) {}
    rpc setVolume(IntRequest) returns (IntResponse) {}
}

message StringRequest {
    string stringRequestValue = 1;
}

message StringResponse {
    string stringResponseValue = 1;
}

message BooleanRequest {
    bool booleanRequestValue = 1;
}

message IntRequest {
    int32 numInput = 1;
}

message IntResponse {
    int32 numOutput = 1;
}