syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.project.smarthome.tv";
option java_outer_classname = "TvServiceImpl";

package smarthome;

service TvService {
    rpc turnOn(StringRequest) returns (StringResponse) {}
}

message StringRequest {
    string val = 1;
}

message StringResponse {
    string val = 1;
}